# what-am-i-learning

./: CODE_QUALITY_REPORT.md  LICENSE  QUICK_REFERENCE.md  README.md  REORGANIZATION_SUMMARY.md  javascript.js  normaliation-vs-standardization.ipynb  pyproject.toml  requirements.in  requirements.txt
DSA/: 01_arrays_&_strings.ipynb  02_singly_&_doubly_linked.ipynb  03_hash_tables.ipynb  04_stacks_&_queues.ipynb  05_recursion.ipynb  arrays_&_strings.py  arrays_&_strings_data_structures_&_algorithms.py  python_basics.py  singly_&_doubly_linked_lists_data_structures_&_algorithms_course.py
SQL/: Advanced - Temp Tables.sql  Advanced - Triggers and Events.sql  Beginner - Group By + Order By.sql
a_project_workflow/: Data_sicence_project_workflow.ipynb
chat-ws/: package-lock.json  tsconfig.tsbuildinfo
data/: README.md  chennai_cyclones.csv  my_data.csv  my_data.pkl  online_sales_data.csv
data-analysis(EDA)/: data-analysis.py
deep_learning/: README.md
docker/: README.md
docs/: README.md
dsa/: README.md  TOPIC.md
javascript/: javascript.js
linux/: arch-pacman.md
math/: 1-math-functions-examples.ipynb  1-math-functions-examples.py  2-derivatives-examples.ipynb  2-derivatives-examples.py  3-vectors-examples.ipynb  3-vectors-examples.py  4-gradients-examples.ipynb  4-gradients-examples.py  5-matrices-examples.ipynb  5-matrices-examples.py  6-probability-examples.ipynb  6-probability-examples.py
ml/: README.md
postgrsql-nodejs/: package-lock.json  package.json
primsa/: package-lock.json  package.json
projects/: Data_sicence_project_workflow.ipynb  README  (+2 more)
(+187 files in other folders)
