[project]
name = "what-am-i-learning"
version = "0.1.0"
description = "A comprehensive learning repository covering Python, Data Science, Machine Learning, Deep Learning, and more"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.13.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
